[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/Space_Mono/SpaceMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/OnlinePlayMenu/BackLabel.gd" type="Script" id=2]
[ext_resource path="res://scenes/OnlinePlayMenu/CreateLabel.gd" type="Script" id=3]
[ext_resource path="res://scenes/OnlinePlayMenu/JoinLabel.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 42
font_data = ExtResource( 1 )

[node name="OnlinePlayerMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 824.0
margin_bottom = 400.0

[node name="GridContainer2" type="GridContainer" parent="VBoxContainer"]
margin_right = 824.0
margin_bottom = 64.0
columns = 3

[node name="OnlinePlayLabel" type="Label" parent="VBoxContainer/GridContainer2"]
margin_right = 286.0
margin_bottom = 64.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Online Play"

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer2"]
margin_left = 290.0
margin_top = 16.0
margin_right = 420.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "User Name:"

[node name="UserNameInput" type="LineEdit" parent="VBoxContainer/GridContainer2"]
margin_left = 424.0
margin_right = 824.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )

[node name="CreateBtn" type="Label" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 156.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( -349, 40 )
mouse_filter = 1
size_flags_horizontal = 0
custom_fonts/font = SubResource( 4 )
text = "Create"
script = ExtResource( 3 )

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 136.0
margin_right = 824.0
margin_bottom = 200.0
columns = 3

[node name="JoinBtn" type="Label" parent="VBoxContainer/GridContainer"]
margin_right = 156.0
margin_bottom = 64.0
mouse_filter = 1
size_flags_horizontal = 0
custom_fonts/font = SubResource( 5 )
text = "Join: "
valign = 1
script = ExtResource( 4 )

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 160.0
margin_top = 16.0
margin_right = 251.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Server:"
valign = 1

[node name="ServerAddressInput" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 255.0
margin_right = 824.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )

[node name="BackBtn" type="Label" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 104.0
margin_bottom = 268.0
mouse_filter = 1
size_flags_horizontal = 0
custom_fonts/font = SubResource( 6 )
text = "Back"
script = ExtResource( 2 )

[connection signal="gui_input" from="VBoxContainer/CreateBtn" to="VBoxContainer/CreateBtn" method="_on_CreateBtn_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/CreateBtn" to="VBoxContainer/CreateBtn" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/CreateBtn" to="VBoxContainer/CreateBtn" method="_on_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/GridContainer/JoinBtn" to="VBoxContainer/GridContainer/JoinBtn" method="_on_JoinBtn_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/GridContainer/JoinBtn" to="VBoxContainer/GridContainer/JoinBtn" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/GridContainer/JoinBtn" to="VBoxContainer/GridContainer/JoinBtn" method="_on_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/BackBtn" to="VBoxContainer/BackBtn" method="_on_Label_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/BackBtn" to="VBoxContainer/BackBtn" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/BackBtn" to="VBoxContainer/BackBtn" method="_on_mouse_exited"]
